@@ -1,3 +1,6 @@
+* Prevent only using 'free_means' and 'free_varcov' in multipleGroup since this would not be 
+  identified without further constraints (reported by Ken Beath)
+
 * Confidence envelopes option added to itemplot() for trace lines and information plots
 
 * bug fix for multipleGroup when independent groups don't contain all potential response options
